# rorshach

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.yml  main.rs  rorshach.rs
src/rorshach/: consumer.rs  event.rs  event_type.rs  executor.rs  producer.rs  rule.rs  rule_parser.rs
test/integration/: .rorshach.conf  output  start_test.sh
test/integration/test_data/: test.cpp
