[package]
name = "rorshach"
version = "0.2.0"
authors = ["Sam Radhakrishnan <sk09idm@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
hotwatch = "0.4.3"
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
shellexpand = "1.0.0"
regex = "1"
log = "0.4.11"
simple_logger = "1.6.0"
crossbeam = "0.7.3"
pub-sub = "*"